# Git-Sync-d

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
TODOs/: main.cpp.md
scripts/linux/: gitsyncd.service
scripts/windows/: install_service.bat
src/common/: credentials.cpp  credentials.h  db.cpp  db.h  error.cpp  error.h  git.cpp  git.h  ipc.cpp  ipc.h  mainLogic.cpp  mainLogic.h
src/linux/: daemon.cpp  daemon.h
src/mac/: daemon.cpp  daemon.h
src/windows/: eventLog.cpp  eventLog.h  service.cpp  service.h
src/windows/Event Log Resource Files/: GitSyncD.h  GitSyncD.mc  GitSyncD.res
tests/: main_logic_stub.cpp  test_db.cpp  test_git_utils.cpp  test_ipc.cpp
